# Test_Boost

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yunshen/test_boost/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/event/: events.cpp  events.hpp
app/src/main/cpp/state/: istate.hpp
app/src/main/cpp/state/workplan/: start.cpp  start.hpp
app/src/main/java/com/yunshen/test_boost/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yunshen/test_boost/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
